# terminal

./: .gitignore  README.md  default.nix  flake.nix  meson.build
data/: com.expidus.Terminal.yaml  expidus-terminal.desktop.in
src/: application.vala  build.vala.in  window.vala
